--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.14",
-    "@types/react-native-elements": "^0.18.0",
     "@types/react-navigation": "^2.0.16",
     "@types/react-test-renderer": "^16.0.1",
     "jest-expo": "~27.0.0",
@@ -52,7 +51,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta5",
     "react-navigation": "^2.11.2"
   }
 }
