--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-picker-dropdown": "^0.1.2",
     "react-navigation": "^2.11.2"
   }
 }
